changed height to min-height to fix overflow problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
 
 .topnavbar {
   width: 100%;
-  height: 10%;
+  min-height: 10%;
   background: #98161a;
   position: fixed;
   z-index: 2;
